# pathtracer

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  Scene.h  main.cc  scene.h  timeit.h
src/bvh/: CMakeLists.txt  bvh.cc  bvh.h
src/gltf_loader/: CMakeLists.txt  gltf_loader.cc  gltf_loader.h
src/renderer/: CMakeLists.txt  render_config.h  render_job.cc  render_job.h  renderer.cc  renderer.h  vk_allocator.cc  vk_allocator.h  vk_manager.cc  vk_manager.h  vulkan_manager.cc  vulkan_manager.h
src/renderer/shaders/: main.comp
src/scene/: CMakeLists.txt  scene.cc  scene.h
src/stb/: CMakeLists.txt
